Fixed alignment

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ button {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    align-items: center;
 }
 
 .portrait {
